syntax = "proto3";

package channel;

option go_package = "github.com/m25-lab/lightning-network-node/pb";

service ChannelService {
    rpc OpenChannel (OpenChannelRequest) returns (OpenChannelResponse) {}
    rpc CreateCommitment(CreateCommitmentRequest) returns (CreateCommitmentResponse) {}
    rpc WithdrawHashlock(WithdrawHashlockRequest) returns (WithdrawHashlockResponse) {}
    rpc WithdrawTimelock(WithdrawTimelockRequest) returns (WithdrawTimelockResponse) {}
}

message OpenChannelRequest {
    string accountA = 1;
    string accountB = 2;
    uint64 amountA = 3;
    uint64 amountB = 4;
    string accountChannel = 5;
    uint32 sequence = 6;
}

message OpenChannelResponse {
    string response = 1;
}

message CreateCommitmentRequest {
    string accountFrom = 1;
    uint64 amountA = 2;
    string toAHashlock = 3;
    string hashCode = 4;
    string toBHashlock = 5;
    string blockHeight = 6;
    uint64 coinLock = 7;
}

message CreateCommitmentResponse {
    string response = 1;
}

message WithdrawHashlockRequest{
    string accountTo = 1;
    string index = 2;
    string secret = 3;
}

message WithdrawHashlockResponse {
    string response = 1;
}

message WithdrawTimelockRequest{
    string accountTo = 1;
    string index = 2;
}

message WithdrawTimelockResponse {
    string response = 1;
}
